testing appveyor with vulkan

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,23 @@
 version: 1.0.{build}
 
-image: Visual Studio 2017
+image: Visual Studio 2019
 
 platform:
   - x64
 configuration:
   - Debug
   - Ship
+  
+environment:
+  VULKAN_SDK: c:\VulkanSDK\1.1.126.0
 
 install:
+  - curl -L --silent --show-error --output VulkanSDK.exe https://vulkan.lunarg.com/sdk/download/1.1.126.0/windows/VulkanSDK-1.1.126.0-Installer.exe?Human=true
+  - .\VulkanSDK.exe /S
   - git submodule update --init --recursive
 
 before_build:
-  - cmake -G "Visual Studio 15 2017 Win64" .
+  - cmake -G "Visual Studio 16 2019" -Ax64
 
 build:
   project: $(APPVEYOR_BUILD_FOLDER)\$(APPVEYOR_PROJECT_NAME).sln
