removed Ka and Ke, and just use Kd for the ambient color

--- a/resources/scenes/normal_mapping.json
+++ b/resources/scenes/normal_mapping.json
@@ -11,7 +11,7 @@
         "farPlane": 100
     },
     "AmbientColor": {
-        "color": [ 1, 1, 1 ]
+        "color": [ .1, .1, .1 ]
     },
     "_DirectionalLight": {
         "colorAndIntensity": [ 1, 1, 1, 0 ],
