refactor: changed all VkFramebuffer to PG::Gfx::Framebuffer. Also now keeping the scene and light buffers persistently mapped (didnt notice a performance difference in the FPS at least).

--- a/progression/CMakeLists.txt
+++ b/progression/CMakeLists.txt
@@ -29,6 +29,8 @@ set(
     graphics/graphics_api/descriptor.hpp
     graphics/graphics_api/device.cpp
     graphics/graphics_api/device.hpp
+    graphics/graphics_api/framebuffer.cpp
+    graphics/graphics_api/framebuffer.hpp
     graphics/graphics_api/pipeline.cpp
     graphics/graphics_api/pipeline.hpp
     graphics/graphics_api/render_pass.cpp
