fix: Wasn't capping the lowest mip size at 1, so it was going to 0 for non-square images. Also tried to fix the pthread linkage for linux in basisu

--- a/ext/basis_universal/CMakeLists.txt
+++ b/ext/basis_universal/CMakeLists.txt
@@ -39,6 +39,11 @@ set(BASISU_SRC_LIST ${COMMON_SRC_LIST}
 	transcoder/basisu_global_selector_palette.h
 )
 
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+
 add_library(basisu_lib ${BASISU_SRC_LIST})
+target_link_libraries(basisu_lib Threads::Threads)
+
 add_executable(basisu basisu_tool.cpp)
 target_link_libraries(basisu basisu_lib)
