feat: added tool to analyze model files, and auto create all of the image entries in a fastfile with the default or provided settings. This is to provide better dependency checking (esp for compressed images imbedded into material ffi's), and also hopefully the duplicate image problem for default loaded images, since this change removes serializing default loaded textures

--- a/progression/CMakeLists.txt
+++ b/progression/CMakeLists.txt
@@ -156,6 +156,7 @@ set(
 	utils/json_parsing.cpp
 	utils/logger.cpp
     utils/random.cpp
+    utils/string.cpp
     utils/timestamp.cpp
 	
 	utils/fileIO.hpp
@@ -164,6 +165,7 @@ set(
     utils/noncopyable.hpp
     utils/random.hpp
     utils/serialize.hpp
+    utils/string.hpp
     utils/timestamp.hpp
     utils/type_name.hpp
 )
