adding resource files for profiling bc textures on desktop/laptop. Also fixed a couple of bugs in the conversion process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ if (UNIX AND NOT APPLE)
 elseif(MSVC)
     #set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /WX")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Od")
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Ox")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O2")
     set(CMAKE_CXX_FLAGS_SHIP "${CMAKE_CXX_FLAGS_SHIP} /O2")
 endif()
 
